# interview-prep-os

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CONTRIBUTING.md  DESIGN.md  Dockerfile  NOTICE.md  README.md  SECURITY.md  compose.community.yaml  compose.yaml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.app.json  vite.config.ts
app/: __init__.py  api.py  attempts.py  backup.py  community.py  content.py  curriculum.py  db.py  errors.py  learning.py  lessons.py  main.py  repository.py  roadmap.py  scheduler.py  schemas.py  services.py  sessions.py
app/ai/: __init__.py  ai_db.py  api.py  artifacts.py  config.py  context.py  domain.py  gateway.py  providers.py  repository.py  worker.py
curricula/: outtalent.json  skills.json  starter.json
docs/: architecture.md  community-ai-architecture.md  community-ai-operations.md  community-install.md  community-release-checklist.md  operations.md
docs/prompts/: community-ai-frontend-review.md  community-distribution-review.md  paper-first-practice-v3-review-fixes.md  (+1 more)
frontend/: index.html
frontend/src/: App.tsx  (+7 more)
scripts/: backup_database.py  community_data.py  community_setup.py  deploy.py  import_legacy.py  import_outtalent.py  run_e2e_server.py
tests/: conftest.py  test_ai.py  test_ai_blockers.py  test_api.py  test_backup.py  test_catalog.py  test_community_distribution.py  test_content.py  test_cross_origin_writes.py  test_import_legacy.py  test_learning.py  test_learning_api.py  test_migrations.py  test_outtalent.py  test_scheduler.py  test_sessions.py
(+35 files in other folders)
